# robotnik_rbvogui_tum

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: rbvogui_standard_controllers.yaml
dependencies/: rbvogui_simulation.jazzy.repos  robotnik_rbvogui_tum.repos  ur_simulation_gz.ros2.repos
docs/: topic_contract.md
launch/: rbvogui_ur_standard_control.launch.py
scripts/: current_pose_from_tf.py  rbvogui_swerve_controller.py  tf_model_pose_to_pose_stamped.py
urdf/: rbvogui_ur_standard_control.urdf.xacro  ur20_spraying_tool.urdf
urdf/wheels/rubber_wheel/: rubber_wheel_285.urdf.xacro
urdf/wheels/steering_wheel/: steering_wheel_285.urdf.xacro
