<?xml version="1.0"?>
<package format="3">
  <name>robotnik_rbvogui_tum</name>
  <version>0.1.0</version>
  <description>Standalone Gazebo simulation for a Robotnik RB-VOGUI-XL with Ewellix lift and Universal Robots arm.</description>
  <maintainer email="maintainer@todo.todo">TUM Robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robotnik_description</exec_depend>
  <exec_depend>robotnik_gazebo_ignition</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_simulation_gz</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
